# c102-sekimiya-ai

./: .env.sample  README.md  pyproject.toml
src/sekimiya_ai_langchain/: bot.py
